--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 /* HOME PAGE  */
 /* navbar and log */
 header {
-    background-color: rgb(247, 92, 2);
+    background-color: rgb(255, 255, 255);
     width: 100%;
     height: 65px;
 }
@@ -70,7 +70,7 @@ li a:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url('../image/pexels-mermek-avitia-11679848\ \(1\).jpg');
+    background-image: url(../image/Aibel\ 2023.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -88,7 +88,7 @@ span {
     font-weight: 800;
     font-size: 3.5rem;
     line-height: 56px;
-    background: linear-gradient(266.52deg, rgb(247, 92, 2) 57.51%, #f6f8f8 78.55%);
+    background: linear-gradient(266.52deg, rgb(212, 78, 0) 57.51%, #f6f8f8 78.55%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
@@ -98,7 +98,7 @@ span {
 
 /* bikes section */
 #bikes-section {
-    background: url(../image/pexels-lil-artsy-2747793.jpg) no-repeat center center fixed; 
+    background: url(../image/tshirt.png) no-repeat center center fixed; 
     background-size: cover;
     margin-top: 3rem
 }
@@ -211,7 +211,7 @@ footer {
     align-items: center;
     text-align: center;
     padding: 50px 30px;
-    background: url('../image/pexels-lil-artsy-2747793.jpg');
+    background: url('../image/Aibel\ 2023.jpg');
     background-size: cover;    
 }
 
@@ -318,11 +318,11 @@ p {
 }
 
 #bikes-1 {
-    background-image:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url('../image/pexels-lil-artsy-2747793.jpg');
+    background-image:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url('../image/tshirt.png');
 }
 
 #bikes-2 {
-    background-image:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url('../image/pexels-seva-kruhlov-12764751.jpg');
+    background-image:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url('../image/keps.png');
 }
 
 #bikes-3 {
