--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 header {
     background-color: rgb(255, 255, 255);
     width: 100%;
-    height: 65px;
+    height: 65%;
 }
 
 #logo, nav {
@@ -311,7 +311,7 @@ p {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    color: #000000;
+    color: #ffffff;
     margin: 1rem;
     line-height: 120%;
     /* letter-spacing: 2px; */
@@ -340,7 +340,7 @@ p {
 }
 
 .head-3 {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-size: 24px;
     padding: 0.5rem;
     margin-top: 2rem;
