change form to email

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,7 +373,7 @@ p {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-image:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)), url('../image/bg-thankyou.webp');
+    background-image:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)), url('../image/Aibel\ 2023.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     padding-top: 4rem;
