--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -428,7 +428,7 @@ ul{
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: #12d4ff;
+    background: #6c6d6d;
     top: 80px;
     left: -100%;
     text-align: center;
@@ -456,7 +456,7 @@ h1 {
 .hero span {
     font-size: 2.3rem;
 }
-
+  }
 /* clothes page */
 .clothes-container {
     flex-direction: column;
